# ukr-kb-trainer

./: .gitignore  Cargo.toml  README.md  TRAINING.md  training_corpus.txt
data/: fingers_config.json  level_curriculum.json  training_corpus.txt  word_frequencies.json
data/word_pool/: 03.txt  05.txt  06.txt  09.txt  10.txt  11.txt  12.txt  13.txt  15.txt  16.txt  17.txt  18.txt  19.txt  22.txt  24.txt  27.txt  29.txt  33.txt  36.txt  39.txt  40.txt  41.txt  42.txt  46.txt  47.txt  50.txt
models/: vocab.json
scripts/: prepare_corpus.sh  prepare_training_corpus.sh
src/: main.rs
src/cli/: display.rs  input.rs  mod.rs
src/llm/: constraints.rs  mod.rs  model.rs  scoring.rs  vocab.rs
src/session/: accuracy.rs  errors.rs  mod.rs  state.rs
stamina/advanced/: dash_apo.txt
stamina/clean/: 01.txt  02.txt  04.txt  07.txt  08.txt  14.txt  20.txt  21.txt  23.txt  25.txt  26.txt  28.txt  30.txt  31.txt  32.txt  34.txt  35.txt  37.txt  38.txt  43.txt  44.txt  45.txt  48.txt  49.txt
